--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=0">
+        <meta name="theme-color" content="#282828">
         <link href="favicon.ico" rel="shortcut icon">
         <title>Github•彭双</title>
     <!--[if lte IE 9]> <script type="text/javascript">alert("本站使用了最新的HTML5技术，故不支持IE10以下的IE浏览器，并且版本过旧的浏览器存在较大的安全隐患，请尽快更换或升级你的浏览器以获得更好的体验！确认将跳转至ie11升级页面。(推荐chrome或火狐浏览器)");window.location.href="https://www.microsoft.com/zh-cn/download/Internet-Explorer-11-for-Windows-7-details.aspx";</script> <![endif]-->
