status bar style

--- a/src/template.html
+++ b/src/template.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0,user-scalable=0" />
         <meta name="theme-color" content="#282828" />
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
         <link href="favicon.ico" rel="shortcut icon">
         <title><%= htmlWebpackPlugin.options.title %></title>
     <!--[if lte IE 9]> <script type="text/javascript">alert("本站使用了最新的HTML5技术，故不支持IE10以下的IE浏览器，并且版本过旧的浏览器存在较大的安全隐患，请尽快更换或升级你的浏览器以获得更好的体验！确认将跳转至ie11升级页面。(推荐chrome或火狐浏览器)");window.location.href="https://www.microsoft.com/zh-cn/download/Internet-Explorer-11-for-Windows-7-details.aspx";</script> <![endif]-->
