--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                     <span>ajax</span>
                     <span>bootstrap</span>
                     <span>CET-4</span>
+                    <span>nodejs</span>
                     <span>github</span>
                     <span>移动端页面</span>
                     <span>响应式</span>
@@ -76,7 +77,7 @@
                     <span>协作精神</span>
                     <span>时间观</span>
                 </div>
-                <div class="collapse exp">
+                <div class="collapse exp simCustomScroll">
                     <div class="exp_card">
                         <span>DATE:</span>2012.09 - 2016.07 <br>
                         <span>EXPERIENCE:</span>广东海洋大学 <br>
@@ -87,11 +88,11 @@
                         <span>EXPERIENCE:</span>深圳市同速科技发展有限公司 <br>
                         <span>ROLE:</span>前端开发
                     </div>
-                    <div class="exp_card">
+                    <div class="exp_card to_be_continue">
                         未完待续...
                     </div>
                 </div>
-                <div class="collapse exp">
+                <div class="collapse exp simCustomScroll">
                     <div class="exp_card">
                         <span>DATE:</span>2016.12 - 至今 <br>
                         <span>PROJECT:</span>齿科医疗连锁门诊管理系统 <br>
@@ -105,9 +106,20 @@
                         <div class="textLimited"><span>DUTY:</span>负责活动管理(活动的申请与审批)模块：微信端与负责企业号的后端人员合作开发，使用Angular框架配合ui-router模块进行SPA开发，设计前后端交换的数据格式；PC端使用bootstrap设计编写界面。</div>
                     </div>
                     <div class="exp_card">
+                        <span>DATE:</span>2017.06 - 2017.07 <br>
+                        <span>PROJECT:</span>同步齿科后台管理系统 <br>
+                        <div class="textLimited"><span>DESCRIPTION:</span>公司内部的后台管理系统，主要实现OA办公功能 </div>
+                        <div class="textLimited"><span>DUTY:</span>负责活动管理(活动的申请与审批)模块：微信端与负责企业号的后端人员合作开发，使用Angular框架配合ui-router模块进行SPA开发，设计前后端交换的数据格式；PC端使用bootstrap设计编写界面。</div>
+                    </div>
+                    <div class="exp_card">
+                        <span>DATE:</span>2017.06 - 2017.07 <br>
+                        <span>PROJECT:</span>同步齿科后台管理系统 <br>
+                        <div class="textLimited"><span>DESCRIPTION:</span>公司内部的后台管理系统，主要实现OA办公功能 </div>
+                        <div class="textLimited"><span>DUTY:</span>负责活动管理(活动的申请与审批)模块：微信端与负责企业号的后端人员合作开发，使用Angular框架配合ui-router模块进行SPA开发，设计前后端交换的数据格式；PC端使用bootstrap设计编写界面。</div>
+                    </div>
+                    <div class="exp_card to_be_continue">
                         未完待续...
                     </div>
-
                 </div>
                 <div class="collapse me">
                         <div><i class="iconfont icon-youxiang"></i><a href="mailto:gdps94@163.com" title="给我发送邮件">gdps94@163.com</a></div>
