--- a/src/template.html
+++ b/src/template.html
@@ -52,7 +52,7 @@
             </div>
             <div class="contacts">
                 <div class="collapse intro"><div class="profile"><i class="iconfont icon-ren"></i><i class="iconfont icon-yanjing"></i></div>
-                    <span>less</span>
+                    <!-- <span>less</span>
                     <span>VUE</span>
                     <span>javascript</span>
                     <span>HTML5</span>
@@ -75,7 +75,7 @@
                     <span>进取心</span>
                     <span>责任心</span>
                     <span>协作精神</span>
-                    <span>时间观</span>
+                    <span>时间观</span> -->
                 </div>
                 <div class="collapse exp simCustomScroll">
                     <div class="exp_card">
