--- a/index.html
+++ b/index.html
@@ -77,46 +77,46 @@
                     <span>协作精神</span>
                     <span>时间观</span> -->
                 </div>
-                <div class="collapse exp simCustomScroll">
-                    <div class="exp_card">
-                        <span>DATE:</span>2012.09 - 2016.07 <br>
-                        <span>EXPERIENCE:</span>广东海洋大学 <br>
+                <div class="collapse exp work simCustomScroll">
+                    <!-- <div class="exp_card">
+                        <span>DATE:</span>2012.09 - 2016.07 <br />
+                        <span>EXPERIENCE:</span>广东海洋大学 <br />
                         <span>ROLE:</span>学生
                     </div>
                     <div class="exp_card">
-                        <span>DATE:</span>2016.12 - 至今 <br>
-                        <span>EXPERIENCE:</span>深圳市同速科技发展有限公司 <br>
+                        <span>DATE:</span>2016.12 - 至今 <br />
+                        <span>EXPERIENCE:</span>深圳市同速科技发展有限公司 <br />
                         <span>ROLE:</span>前端开发
-                    </div>
+                    </div> -->
                     <div class="exp_card to_be_continue">
                         未完待续...
                     </div>
                 </div>
-                <div class="collapse exp simCustomScroll">
-                    <div class="exp_card">
-                        <span>DATE:</span>2016.12 - 至今 <br>
-                        <span>PROJECT:</span>齿科医疗连锁门诊管理系统 <br>
+                <div class="collapse exp project simCustomScroll">
+                    <!-- <div class="exp_card">
+                        <span>DATE:</span>2016.12 - 至今 <br />
+                        <span>PROJECT:</span>齿科医疗连锁门诊管理系统 <br />
                         <div class="textLimited"><span>DESCRIPTION:</span>一款用于齿科连锁门诊的医疗管理系统软件，针对整体连锁门诊中各岗位人员的使用设计开发。</div>
                         <div class="textLimited"><span>DUTY:</span>参与了软件的流程与功能设计，代码规范的编写。主要负责划价收费、数据图表、病历模版编辑等界面的实现。主要的逻辑与数据处理都在前端，使用了Angularjs框架，进行数据绑定与表格绘制等操作。自定义病历界面的富文本框，并重写了富文本编辑框的粘贴、撤销等事件，使用canvas实现牙位图的动态绘制并插入框内。数据图表的绘制引入了echarts3库。</div>
                     </div>
                     <div class="exp_card">
-                        <span>DATE:</span>2017.06 - 2017.07 <br>
-                        <span>PROJECT:</span>同步齿科后台管理系统 <br>
+                        <span>DATE:</span>2017.06 - 2017.07 <br />
+                        <span>PROJECT:</span>同步齿科后台管理系统 <br />
                         <div class="textLimited"><span>DESCRIPTION:</span>公司内部的后台管理系统，主要实现OA办公功能 </div>
                         <div class="textLimited"><span>DUTY:</span>负责活动管理(活动的申请与审批)模块：微信端与负责企业号的后端人员合作开发，使用Angular框架配合ui-router模块进行SPA开发，设计前后端交换的数据格式；PC端使用bootstrap设计编写界面。</div>
                     </div>
                     <div class="exp_card">
-                        <span>DATE:</span>2017.06 - 2017.07 <br>
-                        <span>PROJECT:</span>同步齿科后台管理系统 <br>
+                        <span>DATE:</span>2017.06 - 2017.07 <br />
+                        <span>PROJECT:</span>同步齿科后台管理系统 <br />
                         <div class="textLimited"><span>DESCRIPTION:</span>公司内部的后台管理系统，主要实现OA办公功能 </div>
                         <div class="textLimited"><span>DUTY:</span>负责活动管理(活动的申请与审批)模块：微信端与负责企业号的后端人员合作开发，使用Angular框架配合ui-router模块进行SPA开发，设计前后端交换的数据格式；PC端使用bootstrap设计编写界面。</div>
                     </div>
                     <div class="exp_card">
-                        <span>DATE:</span>2017.06 - 2017.07 <br>
-                        <span>PROJECT:</span>同步齿科后台管理系统 <br>
+                        <span>DATE:</span>2017.06 - 2017.07 <br />
+                        <span>PROJECT:</span>同步齿科后台管理系统 <br />
                         <div class="textLimited"><span>DESCRIPTION:</span>公司内部的后台管理系统，主要实现OA办公功能 </div>
                         <div class="textLimited"><span>DUTY:</span>负责活动管理(活动的申请与审批)模块：微信端与负责企业号的后端人员合作开发，使用Angular框架配合ui-router模块进行SPA开发，设计前后端交换的数据格式；PC端使用bootstrap设计编写界面。</div>
-                    </div>
+                    </div> -->
                     <div class="exp_card to_be_continue">
                         未完待续...
                     </div>
