--- a/src/template.html
+++ b/src/template.html
@@ -8,7 +8,7 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
         <link href="favicon.ico" rel="shortcut icon">
         <title><%= htmlWebpackPlugin.options.title %></title>
-    <!--[if lte IE 9]> <script type="text/javascript">alert("本站使用了最新的HTML5技术，故不支持IE10以下的IE浏览器，并且版本过旧的浏览器存在较大的安全隐患，请尽快更换或升级你的浏览器以获得更好的体验！确认将跳转至ie11升级页面。(推荐chrome或火狐浏览器)");window.location.href="https://www.microsoft.com/zh-cn/download/Internet-Explorer-11-for-Windows-7-details.aspx";</script> <![endif]-->
+    <!--[if lte IE 9]> <script type="text/javascript">alert("本站使用了最新的HTML5技术，故不支持IE10以下的IE浏览器，并且版本过旧的浏览器存在较大的安全隐患，请尽快更换或升级你的浏览器以获得更好的体验！确认将跳转至新版本浏览器页面。(推荐chrome或火狐浏览器)");window.location.href="https://browsehappy.com/";</script> <![endif]-->
     </head>
     <body>
         <div class="loading_cover">
